# textileanatomy_dds

./: .gitignore  README.md  TEXTILE MFA pitch.pptx  pyproject.toml
data/: NEW clustered_fiber_composition.xlsx  Nordic_Textile_Anatomy_Database_DdS.xlsx  Supply of textile clothing-1.xlsx  clothing_production.xlsx  clothing_production_interpolated.xlsx  clustered_fiber_composition.xlsx  mfa_export.xlsx
notebooks/: CombustionModel.ipynb  Element_flows.ipynb  basic_combustion_model.ipynb  data_agg.ipynb  fiber_lca_high_recycling.csv  fiber_lca_long_life.csv  fiber_lca_original.csv  lca_processing.ipynb  mfa_model.ipynb  textile_LCA_26062025.ipynb
